# MLEnginnering_techChallenge_1

./: .gitignore  README.md  books.db  pyproject.toml  tb_books.db  test.py
app/: crud.py  database.py  main.py  models.py  schemas.py  scraping.py
app/routers/: auth.py  books.py  categories.py  health.py  ml.py  stats.py
streamlit/: logs_dashboard.py
tests/: test_books.py
