[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "gustavo-leandro",email = "gustavo.sleandro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
